# Pomodoro

./: .gitignore  .local.env  Makefile  alembic.ini  dependecy.py  docker-compose.test.yml  docker-compose.yml  exception.py  fixtures.py  gunicorn.conf.py  main.py  pomodoro.sqlite  pycrypto-2.6.1-cp310-cp310-linux_x86_64.whl  pyproject.toml  pytest.ini  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: 28455b374454_add_user_table.py  3c8975b3cc1b_nullable_true_in_fields_username_.py  43410e4a5f40_delete_field_access_token_in_table_user.py  4af209599d22_add_field_user_id_in_table_tasks.py  5f521410c7ff_add_yandex_access_token_in_table_.py  98f555a77e6a_category_add_field_type.py  a2c449b9fd17_add_fields_google_access_token_email_.py  a9d3ff58c566_add_atributs_to_taskshema_id.py  de2b73c7a8b9_init.py  dee3c3215e49_edit_field_access_token_in_table_.py
app/: consumer.py  dependecy.py  exception.py  main.py  settings.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: accessor.py
app/tasks/: handlers.py  models.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/users/auth/: handlers.py  schema.py  service.py
cache/: accessor.py
database/: accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  task.py
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: infrastructure.py
worker/: celery.py
(+14 files in other folders)
