[tool.poetry]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = ["alexanderone89 <alexanderone89@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
httpx = "^0.28.1"
sqlalchemy = "^2.0.41"
requests = "^2.32.4"
asyncpg = "^0.30.0"
redis = "^6.2.0"
python-jose = "^3.5.0"
alembic = "^1.16.4"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
