[tool.poetry]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = ["alexanderone89 <alexanderone89@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
httpx = "^0.28.1"
sqlalchemy = "^2.0.41"
requests = "^2.32.4"
asyncpg = "^0.30.0"
redis = "^6.2.0"
python-jose = "^3.5.0"
alembic = "^1.16.4"
gunicorn = "^23.0.0"
pytest = {extras = ["async"], version = "^8.4.1"}
pytest-twisted = "^1.14.3"
twisted = "^25.5.0"
factory-boy = "^3.3.3"
pytest-factoryboy = "^2.8.1"
pytest-asyncio = "^1.1.0"
pytest-async = "^0.1.1"
pytest-trio = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
